syntax = "proto3";

option go_package = "common/communication/protocol";

import "proto/results/result1.proto";
import "proto/results/result2.proto";
import "proto/results/result3.proto";
import "proto/results/result4.proto";
import "proto/results/result5.proto";
import "proto/eof/omegaEOF.proto";
import "proto/task.proto";

enum MessageStatus {
    SUCCESS = 0;
    FAIL = 1;
    PENDING = 2;
}

message BatchAck {
    string batch_id = 1;
    MessageStatus status = 2;
}

message FileEOFAck {
    MessageStatus status = 1;
}

message SyncAck {
    string client_id = 1;
}

message FinishAck {}

message DisconnectAck {}

message ResultsResponse {
    
    message Result{
        oneof Message {
            Result1 result1 = 1;
            Result2 result2 = 2;
            Result3 result3 = 3;
            Result4 result4 = 4;
            Result5 result5 = 5;
            OmegaEOF omegaEOF = 6;
        };

        TaskIdentifier task_identifier = 7;
    }   
   
    MessageStatus status = 1;
    repeated Result results = 2;
}


message ServerClientMessage{
    oneof message {
        BatchAck batch_ack = 1;
        FileEOFAck file_eof_ack = 2;
        SyncAck sync_ack = 3;
        ResultsResponse results = 4;
        FinishAck finish_ack = 5;
        DisconnectAck disconnect_ack = 6;
    }
}